manifests/pihole/sts-pihole.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  namespace: pihole
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: pihole
    app.kubernetes.io/version: v2025.04.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  serviceName: pihole-pods
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:2025.07.1
          ports:
            - name: pihole-dns
              containerPort: 53
            - name: pihole-dns-udp
              containerPort: 53
              protocol: UDP
            - name: pihole-http
              containerPort: 80
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_TIME
                - SYS_NICE
          volumeMounts:
            - mountPath: /etc/pihole
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 256Mi
