manifests/pihole/svc-pihole.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  labels:
    app.kubernetes.io/name: pihole
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns
      port: 53
      targetPort: pihole-dns
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: pihole-dns-udp
    - name: http
      port: 80
      targetPort: pihole-http
