manifests/pihole/ing-pihole-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-tailscale
  namespace: pihole
  annotations:
    tailscale.com/tags: "tag:pihole,tag:k8s"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pihole
      port:
        name: http
  tls:
    - hosts:
        - pihole
        - pihole.takaya-map.ts.net
